package at.htl.fensterverkauf;

public enum Material {
    HolzAlu,
    KunststoffAlu,
    Kunststoff
}
