package at.htl.fensterverkauf;

public enum Properties {
    Panzerglas,
    Milchglas,
    UVSchutz
}
